--- a/renderer/src/styles/global.css
+++ b/renderer/src/styles/global.css
@@ -141,3 +141,56 @@ body {
 a {
   text-decoration: none;
 }
+
+.chatptag {
+  text-align: center;
+}
+.chatForm {
+  border: 0px solid gray;
+  min-height: 70vh;
+  max-height: 70vh;
+  overflow-y: auto;
+}
+.mychat {
+  text-align: right;
+  margin-bottom: 10px;
+}
+.yourchat {
+  margin-bottom: 10px;
+}
+.mychat p,
+.yourchat p {
+  font-size: 0.7rem;
+  padding: 3px;
+}
+.mychat span {
+  background-color: #192a56;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+.yourchat span {
+  background-color: #718093;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+
+.formWraper {
+  display: flex;
+}
+.input {
+  padding: 10px 20px;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  width: 95%;
+  margin-right: 5px;
+}
+
+.sendbtn {
+  padding: 10px 20px;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  background-color: #192a56;
+  color: white;
+}
